<resources>
    <string name="app_name">Custom Components</string>
    <string name="title_activity_login_example">LoginExampleActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="str_edt_title" > Enter the String </string>
    <string name="str_title">Title</string>
    <string name="str_page_secondary_title">Page Secondary Title</string>
    <string name="str_enter_your_message">Enter your message</string>
    <string name="str_ok">Ok</string>
    <string name="str_clear">Clear</string>
</resources>