<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/dimen_std_page_margin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/dialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_light_gray"
        android:minHeight="@dimen/toolbar_height"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding_tiny_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtDialogTitle"
            style="@style/text_views_cardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_std_page_margin"
            android:layout_marginBottom="@dimen/dimen_std_page_margin"
            android:text="@string/str_title" />

        <TextView
            android:id="@+id/txtDialogTitleValue"
            style="@style/text_views_cardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_std_page_margin"
            android:layout_marginBottom="@dimen/dimen_std_page_margin"
            android:text="@string/str_page_secondary_title" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layDialogContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_x_tiny"
        android:minHeight="@dimen/toolbar_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogHeader">


        <TextView
            android:id="@+id/txtDialogMessage"
            style="@style/text_views_message_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_std_page_margin"
            android:layout_marginBottom="@dimen/dimen_std_page_margin"
            android:text="You should have to enter message in input box."
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtDialogHint"
            style="@style/text_views_cardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_std_page_margin"
            android:layout_marginBottom="@dimen/dimen_std_page_margin"
            android:text="@string/str_enter_your_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDialogMessage" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_barcode"
            style="@style/text_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_tiny"
            android:hint="@string/str_enter_your_message"
            android:imeOptions="actionNext"
            android:inputType="textCapCharacters"
            android:maxLength="18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDialogHint" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        style="@style/dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_normal"

        android:text="@string/str_ok"
        app:layout_constraintEnd_toEndOf="@+id/layDialogContainer"
        app:layout_constraintTop_toBottomOf="@+id/layDialogContainer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClear"
        style="@style/dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_normal"

        android:text="@string/str_clear"
        app:layout_constraintEnd_toStartOf="@+id/btnOk"
        app:layout_constraintTop_toBottomOf="@+id/layDialogContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>